# chnu_labs

./: README.MD  main.cpp
oop/lab2/: CMakeLists.txt  Car.cpp  Car.h  Parking.cpp  Parking.h  main.cpp
oop/lab4/: Car.h  Parking.cpp  Parking.h  main.cpp
oop/laba3/: CMakeLists.txt  Car.cpp  Parking.cpp  Parking.h  main.cpp
